--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 </head>
 <body>
+  <!-- <div id="loader-overlay">
+    <div class="spinner"></div>
+  </div> -->
     <div class="container">
       <section id="home" class="homesection">
         <header>
@@ -98,7 +101,7 @@
           </div>
           </section>
         <section id="contact" style="padding-top: 50px ;">
-          <h1 style="text-align: center; font-size: 40px;">Contact</h1>
+          <h1 style="text-align: center;     font-size: 24px;">Contact</h1>
         <div class="contactsection">
           
             <header>
@@ -155,7 +158,7 @@
             <a href="https://www.snapchat.com/add/winifredesinam?share_id=guUNQ-X9uII&locale=en-GB" class="fa fa-snapchat"></a>
             <a href="www.linkedin.com/in/winifred-kokosu-esinam-24694633a" class="fa fa-linkedin"></a>
           </div>
-          <p class="copyright-section">&copy; 2025 <span>Winam Graphix</span>. Designed by <span>Winam</span>. All rights reserved.</p>
+          <p class="copyright-section">&copy; 2025 <span>Winam Graphix</span>. Designed by <span>Winam. </span> All rights reserved.</p>
           <i class="fa-solid fa-arrow-up-from-bracket" id="arrow"></i>
         </footer>
         
@@ -164,6 +167,19 @@
 </html>
  <script>
   
+  // window.addEventListener("load", function() {
+  //   const loader = document.getElementById("loader-overlay");
+
+  //   // Minimum time to show the loader (in milliseconds)
+  //   const minDisplayTime = 3000; // 2 seconds
+
+  //   // Delay hiding the loader
+  //   setTimeout(() => {
+  //     loader.style.display = "none";
+  //   }, minDisplayTime);
+  //   typeWriter();
+  // });
+
 
   // Add event listener to navigation links
   document.addEventListener('DOMContentLoaded', function() {
